[gd_scene format=4 uid="uid://cebiqt2ntschl"]

[ext_resource type="Script" uid="uid://hga05wg03ekw" path="res://scripts/WorldNode.gd" id="1_ko7vf"]
[ext_resource type="Script" uid="uid://di04u170da4we" path="res://scenes/PlayerNode.gd" id="2_jaefs"]
[ext_resource type="Texture2D" uid="uid://djqkalbyybtgu" path="res://assets/characters/player-idle.png" id="2_lcrr1"]
[ext_resource type="TileSet" uid="uid://cuoq45bagexip" path="res://assets/terrain/TileSet_FloorTiles.tres" id="3_ko7vf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ko7vf"]
atlas = ExtResource("2_lcrr1")
region = Rect2(0, 0, 18, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaefs"]
atlas = ExtResource("2_lcrr1")
region = Rect2(18, 0, 18, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_opajq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko7vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaefs")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ko7vf"]
radius = 4.0
height = 20.0

[node name="WorldNode" type="Node2D" unique_id=477839040]
script = ExtResource("1_ko7vf")

[node name="Terrain" type="TileMapLayer" parent="." unique_id=1373021437]
tile_map_data = PackedByteArray("AAAKAAIAAAAEAAIAAAAKAAMAAAAEAAIAAAAKAAQAAAAEAAIAAAALAAAAAAAEAAIAAAALAAEAAAAEAAIAAAALAAIAAAAEAAIAAAALAAMAAAAEAAIAAAALAAQAAAAEAAIAAAALAAUAAAAEAAIAAAALAAYAAAAEAAYAAAAMAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAAEAAIAAAAMAAQAAAAEAAIAAAAMAAUAAAAEAAIAAAAMAAYAAAAEAAYAAAANAAAAAAAEAAIAAAANAAEAAAAEAAIAAAANAAIAAAAEAAIAAAANAAMAAAAEAAMAAAANAAQAAAAEAAQAAAANAAUAAAAEAAUAAAANAAYAAAAEAAYAAAAOAAAAAAAEAAIAAAAOAAEAAAAEAAIAAAAOAAIAAAAEAAIAAAAOAAMAAAAFAAMAAAAOAAQAAAAFAAQAAAAOAAUAAAAFAAUAAAAOAAYAAAAFAAYAAAAPAAAAAAAGAAIAAAAPAAEAAAAGAAIAAAAPAAIAAAAGAAIAAAAPAAMAAAAGAAMAAAAPAAQAAAAGAAQAAAAPAAUAAAAGAAUAAAAQAAAAAAAHAAAAAAAQAAEAAAAHAAEAAAAQAAIAAAAHAAIAAAAQAAMAAAAHAAMAAAAQAAQAAAAHAAQAAAAFAAQAAAAEAAIAAAAEAAQAAAAEAAIAAAAFAAMAAAAEAAIAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAIAAAAGAAUAAAAEAAIAAAAFAAUAAAAEAAIAAAAEAAUAAAAEAAIAAAADAAQAAAAEAAIAAAAEAAMAAAAEAAIAAAADAAMAAAAEAAIAAAADAAUAAAAEAAIAAAACAAQAAAAEAAIAAAABAAQAAAAEAAIAAAAAAAMAAAAEAAIAAAABAAMAAAAEAAIAAAABAAIAAAAEAAIAAAACAAIAAAAEAAIAAAADAAIAAAAEAAIAAAAAAAQAAAAEAAIAAAAAAAIAAAAEAAIAAAAAAAEAAAAEAAIAAAABAAEAAAAEAAIAAAACAAEAAAAEAAIAAAD//wMAAAAEAAIAAAD+/wIAAAAEAAIAAAD//wEAAAAEAAIAAAAAAAAAAAAEAAIAAAABAAAAAAAEAAIAAAD//wIAAAAEAAIAAAD//wAAAAAEAAIAAAAAAP//AAAEAAIAAAABAP//AAAEAAIAAAACAP//AAAEAAIAAAADAP//AAAEAAIAAAADAAAAAAAEAAIAAAADAAEAAAAEAAIAAAD/////AAAEAAIAAAACAAAAAAAEAAIAAAAEAP//AAAEAAIAAAAEAAAAAAAEAAIAAAAFAAAAAAAEAAIAAAAFAAEAAAAEAAIAAAAEAAIAAAAEAAIAAAAGAAAAAAAEAAIAAAAGAAEAAAAEAAIAAAAFAAIAAAAEAAIAAAAEAAEAAAAEAAIAAAAFAP//AAAEAAIAAAAGAAIAAAAEAAIAAAAGAP//AAAEAAIAAAACAAMAAAAEAAIAAAABAAUAAAAEAAIAAAAAAAUAAAAEAAIAAAD//wUAAAAEAAIAAAD//wQAAAAEAAIAAAD+/wMAAAAEAAIAAAD+/wEAAAAEAAIAAAD+/wAAAAAEAAIAAAD+////AAAEAAIAAAD+/wQAAAAEAAIAAAD+/wUAAAAEAAIAAAACAAUAAAAEAAIAAAD///7/AAAEAAIAAAAAAP7/AAAEAAIAAAABAP7/AAAEAAIAAAAHAP//AAAEAAIAAAD+//7/AAAEAAIAAAAMAP//AAAEAAIAAAALAP//AAAEAAIAAAAKAAAAAAAEAAIAAAAKAAEAAAAEAAIAAAAKAAUAAAAEAAIAAAAJAAQAAAAEAAIAAAAJAAUAAAAEAAIAAAAJAAMAAAAEAAIAAAAIAAMAAAAEAAIAAAAHAAMAAAAEAAIAAAAHAAIAAAAEAAIAAAAHAAEAAAAEAAIAAAAIAAEAAAAEAAIAAAAIAAAAAAAEAAIAAAAJAAAAAAAEAAIAAAAHAAAAAAAEAAIAAAADAP7/AAAEAAIAAAACAP7/AAAEAAIAAAAEAP7/AAAEAAIAAAAFAP7/AAAEAAIAAAAGAP7/AAAEAAIAAAAHAP7/AAAEAAIAAAAIAP7/AAAEAAIAAAAJAP7/AAAEAAIAAAAKAP7/AAAEAAIAAAALAP7/AAAEAAIAAAAKAP//AAAEAAIAAAAIAP//AAAEAAIAAAAJAP//AAAEAAIAAAAJAAIAAAAEAAIAAAAJAAEAAAAEAAIAAAAIAAIAAAAEAAIAAAAIAAQAAAAEAAIAAAAIAAUAAAAEAAIAAAAJAAYAAAAEAAYAAAAKAAYAAAAEAAYAAAAIAAYAAAAEAAYAAAAHAAYAAAAEAAYAAAAGAAYAAAAEAAYAAAAFAAYAAAAEAAYAAAAEAAYAAAAEAAYAAAADAAYAAAAEAAYAAAACAAYAAAAEAAYAAAABAAYAAAAEAAYAAAAAAAYAAAAEAAYAAAD//wYAAAAEAAYAAAD+/wYAAAAEAAYAAAD9/wYAAAAEAAYAAAD8/wYAAAAEAAYAAAD7/wYAAAAEAAYAAAD6/wYAAAADAAYAAAD5/wYAAAACAAYAAAD5/wUAAAACAAUAAAD5/wQAAAACAAUAAAD5/wMAAAACAAUAAAD5/wIAAAACAAUAAAD5/wEAAAACAAUAAAD5/wAAAAACAAUAAAD5////AAACAAUAAAD5//7/AAACAAUAAAD5//3/AAACAAUAAAD5//z/AAACAAUAAAD5//v/AAACAAUAAAD5//r/AAACAAUAAAD6//r/AAADAAUAAAD7//r/AAAEAAIAAAD8//r/AAAEAAIAAAD9//r/AAAEAAIAAAD+//r/AAAEAAIAAAD///r/AAAEAAIAAAAAAPr/AAAEAAIAAAABAPr/AAAEAAIAAAACAPr/AAAEAAIAAAADAPr/AAAEAAIAAAAEAPr/AAAEAAIAAAAFAPr/AAAEAAIAAAAGAPr/AAAEAAIAAAAHAPr/AAAEAAIAAAAIAPr/AAAEAAIAAAAJAPr/AAAEAAIAAAAKAPr/AAAEAAIAAAALAPr/AAAEAAIAAAAMAPr/AAAEAAIAAAANAPr/AAAEAAIAAAAOAPr/AAAFAAIAAAAOAPv/AAAEAAIAAAAOAPz/AAAEAAIAAAAOAP3/AAAEAAIAAAAOAP7/AAAEAAIAAAAOAP//AAAEAAIAAAD8/wUAAAAEAAIAAAD7/wUAAAAEAAIAAAD6/wUAAAADAAUAAAD6/wQAAAADAAUAAAD6/wMAAAADAAUAAAD6/wIAAAADAAUAAAD6/wEAAAADAAUAAAD7/wAAAAAEAAIAAAD6/wAAAAADAAUAAAD6////AAADAAUAAAD6//7/AAADAAUAAAD6//3/AAADAAUAAAD7//3/AAAEAAIAAAD7//z/AAAEAAIAAAD6//z/AAADAAUAAAD6//v/AAADAAUAAAD8//z/AAAEAAIAAAD8//v/AAAEAAIAAAD7//v/AAAEAAIAAAD9//v/AAAEAAIAAAD9//z/AAAEAAIAAAD9//3/AAAEAAIAAAD8//3/AAAEAAIAAAD8//7/AAAEAAIAAAD7//7/AAAEAAIAAAD7////AAAEAAIAAAD8////AAAEAAIAAAD8/wAAAAAEAAIAAAD8/wEAAAAEAAIAAAD7/wEAAAAEAAIAAAD7/wIAAAAEAAIAAAD7/wMAAAAEAAIAAAD7/wQAAAAEAAIAAAD8/wQAAAAEAAIAAAD8/wMAAAAEAAIAAAD8/wIAAAAEAAIAAAD9/wIAAAAEAAIAAAD9/wEAAAAEAAIAAAD9/wAAAAAEAAIAAAD9////AAAEAAIAAAD9//7/AAAEAAIAAAD9/wMAAAAEAAIAAAD9/wQAAAAEAAIAAAD9/wUAAAAEAAIAAAD+//3/AAAEAAIAAAD+//z/AAAEAAIAAAD+//v/AAAEAAIAAAD///v/AAAEAAIAAAD///z/AAAEAAIAAAD///3/AAAEAAIAAAAAAP3/AAAEAAIAAAAAAPz/AAAEAAIAAAAAAPv/AAAEAAIAAAABAPv/AAAEAAIAAAABAPz/AAAEAAIAAAABAP3/AAAEAAIAAAACAP3/AAAEAAIAAAACAPz/AAAEAAIAAAACAPv/AAAEAAIAAAADAPv/AAAEAAIAAAADAPz/AAAEAAIAAAADAP3/AAAEAAIAAAAEAP3/AAAEAAIAAAAEAPz/AAAEAAIAAAAEAPv/AAAEAAIAAAAFAPv/AAAEAAIAAAAFAPz/AAAEAAIAAAAFAP3/AAAEAAIAAAAGAP3/AAAEAAIAAAAGAPz/AAAEAAIAAAAGAPv/AAAEAAIAAAAHAPv/AAAEAAIAAAAHAPz/AAAEAAIAAAAHAP3/AAAEAAIAAAAIAP3/AAAEAAIAAAAIAPz/AAAEAAIAAAAIAPv/AAAEAAIAAAAJAPv/AAAEAAIAAAAJAPz/AAAEAAIAAAAJAP3/AAAEAAIAAAAKAP3/AAAEAAIAAAAKAPz/AAAEAAIAAAAKAPv/AAAEAAIAAAALAPv/AAAEAAIAAAALAPz/AAAEAAIAAAALAP3/AAAEAAIAAAAMAP3/AAAEAAIAAAAMAPz/AAAEAAIAAAAMAPv/AAAEAAIAAAANAPv/AAAEAAIAAAANAPz/AAAEAAIAAAANAP3/AAAEAAIAAAANAP7/AAAEAAIAAAAMAP7/AAAEAAIAAAANAP//AAAEAAIAAAAHAAUAAAAEAAIAAAAHAAQAAAAEAAIAAAAOAPj/AAAFAAAAAAAOAPn/AAAFAAEAAAANAPj/AAAEAAAAAAANAPn/AAAEAAEAAAAMAPj/AAAEAAAAAAAMAPn/AAAEAAEAAAALAPj/AAAEAAAAAAALAPn/AAAEAAEAAAAKAPj/AAAEAAAAAAAKAPn/AAAEAAEAAAAJAPj/AAAEAAAAAAAJAPn/AAAEAAEAAAAIAPj/AAAEAAAAAAAIAPn/AAAEAAEAAAAHAPj/AAAEAAAAAAAHAPn/AAAEAAEAAAAGAPj/AAAEAAAAAAAGAPn/AAAEAAEAAAAFAPj/AAAEAAAAAAAFAPn/AAAEAAEAAAAEAPj/AAAEAAAAAAAEAPn/AAAEAAEAAAADAPj/AAAEAAAAAAADAPn/AAAEAAEAAAACAPj/AAAEAAAAAAACAPn/AAAEAAEAAAABAPj/AAAEAAAAAAABAPn/AAAEAAEAAAAAAPj/AAAEAAAAAAAAAPn/AAAEAAEAAAD///j/AAAEAAAAAAD///n/AAAEAAEAAAD+//j/AAAEAAAAAAD+//n/AAAEAAEAAAD9//j/AAAEAAAAAAD9//n/AAAEAAEAAAD8//j/AAAEAAAAAAD8//n/AAAEAAEAAAD7//j/AAAEAAAAAAD7//n/AAAEAAEAAAD6//j/AAADAAAAAAD6//n/AAADAAEAAAD5//j/AAACAAAAAAD5//n/AAACAAEAAAAPAPj/AAAGAAAAAAAPAPn/AAAGAAEAAAAPAPr/AAAGAAIAAAAPAPv/AAAGAAIAAAAPAPz/AAAGAAIAAAAPAP3/AAAGAAIAAAAPAP7/AAAGAAIAAAAPAP//AAAGAAIAAAARAAEAAAAHAAEAAAASAAEAAAAHAAEAAAATAAEAAAAHAAEAAAAUAAEAAAAHAAEAAAASAAAAAAAHAAEAAAARAAAAAAAHAAEAAAATAAAAAAAHAAEAAAAUAAAAAAAHAAEAAAARAP//AAAHAAEAAAAQAP//AAAHAAEAAAAUAP//AAAHAAEAAAAUAP7/AAAHAAEAAAAUAP3/AAAHAAEAAAAUAPz/AAAHAAEAAAAUAPv/AAAHAAEAAAAUAPr/AAAHAAEAAAAUAPn/AAAHAAEAAAAUAPj/AAAHAAEAAAAUAPf/AAAHAAEAAAAUAPb/AAAHAAEAAAAUAPX/AAAHAAEAAAATAPX/AAAHAAEAAAASAPX/AAAHAAAAAAARAPX/AAAHAAEAAAAQAPX/AAAHAAEAAAAPAPX/AAAHAAEAAAAOAPX/AAAHAAEAAAANAPX/AAAHAAEAAAAMAPX/AAAHAAEAAAALAPT/AAAHAAEAAAAKAPT/AAAHAAEAAAAJAPT/AAAHAAEAAAAIAPT/AAAHAAEAAAAIAPX/AAAHAAEAAAAJAPX/AAAHAAEAAAAKAPX/AAAHAAEAAAALAPX/AAAHAAAAAAAMAPT/AAAHAAEAAAANAPT/AAAHAAEAAAAOAPT/AAAHAAEAAAAPAPT/AAAHAAEAAAAQAPT/AAAHAAEAAAARAPT/AAAHAAEAAAASAPT/AAAHAAEAAAATAPT/AAAHAAEAAAAUAPT/AAAHAAEAAAD2//T/AAAHAAEAAAD1//T/AAAHAAEAAAD3//T/AAAHAAEAAAD4//T/AAAHAAAAAAD5//T/AAAHAAEAAAD6//T/AAAHAAEAAAD7//T/AAAHAAEAAAD8//T/AAAHAAEAAAD9//T/AAAHAAEAAAD+//T/AAAHAAEAAAD///T/AAAHAAEAAAAAAPT/AAAHAAEAAAABAPT/AAAHAAEAAAACAPT/AAAHAAEAAAADAPT/AAAHAAEAAAAEAPT/AAAHAAEAAAAFAPT/AAAHAAEAAAAGAPT/AAAHAAEAAAAHAPT/AAAHAAEAAAAHAPX/AAAHAAEAAAAGAPX/AAAHAAEAAAAFAPX/AAAHAAAAAAAEAPX/AAAHAAEAAAADAPX/AAAHAAEAAAACAPX/AAAHAAEAAAABAPX/AAAHAAEAAAAAAPX/AAAHAAEAAAD///X/AAAHAAAAAAD+//X/AAAHAAEAAAD9//X/AAAHAAEAAAD8//X/AAAHAAEAAAD7//X/AAAHAAEAAAD6//X/AAAHAAEAAAD5//X/AAAHAAEAAAD4//X/AAAHAAEAAAD3//X/AAAHAAEAAAD2//X/AAAHAAEAAAD1//X/AAAHAAEAAAD0//X/AAAHAAAAAAD0//T/AAAHAAEAAAD0//b/AAAHAAEAAAD0//f/AAAHAAEAAAD0//j/AAAHAAEAAAD0//n/AAAHAAEAAAD0//r/AAAHAAEAAAD0//v/AAAHAAEAAAD0//z/AAAHAAAAAAD0//3/AAAHAAEAAAD0//7/AAAHAAEAAADz//7/AAAHAAEAAADz////AAAHAAEAAAD0////AAAHAAEAAAD0/wAAAAAHAAEAAAD0/wEAAAAHAAAAAAD0/wIAAAAHAAEAAAD0/wMAAAAHAAEAAAD0/wQAAAAHAAEAAAD0/wUAAAAHAAEAAAD0/wYAAAAHAAEAAAD0/wcAAAAHAAEAAAD0/wgAAAAHAAEAAAD0/wkAAAAHAAAAAADz/wkAAAAHAAEAAADz/wgAAAAHAAEAAADz/wcAAAAHAAEAAADz/wYAAAAHAAEAAADz/wUAAAAHAAEAAADz/wQAAAAHAAEAAADz/wMAAAAHAAEAAADz/wIAAAAHAAEAAADz/wEAAAAHAAEAAADz/wAAAAAHAAEAAADz//3/AAAHAAEAAADz//z/AAAHAAEAAADz//v/AAAHAAEAAADz//r/AAAHAAEAAADz//n/AAAHAAEAAADz//j/AAAHAAEAAADz//f/AAAHAAEAAADz//b/AAAHAAEAAADz//X/AAAHAAEAAADz//T/AAAHAAEAAAD1/wkAAAAHAAEAAAD2/wkAAAAHAAEAAAD3/wkAAAAHAAEAAAD4/wkAAAAHAAAAAAD5/wkAAAAHAAEAAAD6/wkAAAAHAAEAAAD7/wkAAAAHAAEAAAD8/woAAAAHAAEAAAD9/woAAAAHAAEAAAD+/woAAAAHAAEAAAD//woAAAAHAAEAAAAAAAoAAAAHAAEAAAABAAoAAAAHAAEAAAABAAkAAAAHAAEAAAACAAkAAAAHAAEAAAAAAAkAAAAHAAEAAAD//wkAAAAHAAEAAAD+/wkAAAAHAAAAAAD9/wkAAAAHAAEAAAD8/wkAAAAHAAEAAAD0/woAAAAHAAEAAADz/woAAAAHAAEAAAD1/woAAAAHAAEAAAD2/woAAAAHAAEAAAD3/woAAAAHAAEAAAD4/woAAAAHAAEAAAD5/woAAAAHAAEAAAD6/woAAAAHAAEAAAD7/woAAAAHAAEAAAACAAoAAAAHAAEAAAADAAoAAAAHAAEAAAAEAAoAAAAHAAEAAAAFAAoAAAAHAAEAAAAGAAoAAAAHAAEAAAAHAAoAAAAHAAEAAAAIAAoAAAAHAAEAAAAJAAoAAAAHAAEAAAAKAAoAAAAHAAEAAAALAAoAAAAHAAEAAAAMAAoAAAAHAAEAAAANAAoAAAAHAAEAAAAOAAoAAAAHAAEAAAAPAAoAAAAHAAEAAAAQAAoAAAAHAAEAAAARAAoAAAAHAAEAAAASAAoAAAAHAAEAAAATAAoAAAAHAAEAAAAUAAoAAAAHAAEAAAAUAAkAAAAHAAEAAAATAAkAAAAHAAEAAAASAAkAAAAHAAAAAAARAAkAAAAHAAEAAAAQAAkAAAAHAAEAAAAPAAkAAAAHAAAAAAAOAAkAAAAHAAEAAAANAAkAAAAHAAEAAAAMAAkAAAAHAAEAAAALAAkAAAAHAAEAAAAKAAkAAAAHAAEAAAAJAAkAAAAHAAEAAAAIAAkAAAAHAAEAAAAHAAkAAAAHAAEAAAAGAAkAAAAHAAEAAAAFAAkAAAAHAAAAAAAEAAkAAAAHAAEAAAADAAkAAAAHAAEAAAATAAIAAAAHAAEAAAATAAMAAAAHAAEAAAATAAQAAAAHAAEAAAAUAAMAAAAHAAEAAAAUAAIAAAAHAAAAAAATAAUAAAAHAAEAAAATAAYAAAAHAAEAAAATAAcAAAAHAAEAAAAUAAgAAAAHAAEAAAAUAAcAAAAHAAEAAAAUAAYAAAAHAAEAAAAUAAUAAAAHAAEAAAAUAAQAAAAHAAEAAAATAAgAAAAHAAEAAAD//wcAAAAHAAEAAAD+/wcAAAAHAAEAAAD9/wcAAAAHAAEAAAD8/wcAAAAHAAEAAAD7/wcAAAAHAAEAAAD6/wcAAAAHAAEAAAD5/wcAAAAHAAEAAAD4/wcAAAAHAAEAAAD4/wYAAAAHAAEAAAD4/wUAAAAHAAEAAAD4/wQAAAAHAAEAAAD4/wMAAAAHAAEAAAD4/wIAAAAHAAEAAAD4/wEAAAAHAAEAAAD4/wAAAAAHAAEAAAD4////AAAHAAEAAAD4//7/AAAHAAEAAAD4//3/AAAHAAEAAAD4//z/AAAHAAEAAAD4//v/AAAHAAEAAAD4//r/AAAHAAEAAAD4//n/AAAHAAEAAAD4//j/AAAHAAEAAAD4//f/AAAHAAEAAAD4//b/AAAHAAEAAAD3//b/AAAHAAEAAAD2//b/AAAHAAEAAAD1//b/AAAHAAEAAAD1//f/AAAHAAEAAAD1//j/AAAHAAAAAAD1//n/AAAHAAEAAAD1//r/AAAHAAEAAAD1//v/AAAHAAEAAAD1//z/AAAHAAEAAAD1//3/AAAHAAEAAAD1//7/AAAHAAEAAAD1////AAAHAAEAAAD1/wAAAAAHAAEAAAD1/wEAAAAHAAEAAAD1/wIAAAAHAAEAAAD1/wMAAAAHAAEAAAD1/wQAAAAHAAEAAAD1/wUAAAAHAAAAAAD1/wYAAAAHAAEAAAD1/wcAAAAHAAEAAAD1/wgAAAAHAAEAAAD2/wgAAAAHAAEAAAD2/wcAAAAHAAAAAAD2/wYAAAAHAAEAAAD2/wUAAAAHAAEAAAD2/wQAAAAHAAEAAAD2/wMAAAAHAAEAAAD2/wIAAAAHAAEAAAD2/wEAAAAHAAEAAAD2/wAAAAAHAAEAAAD2////AAAHAAEAAAD2//7/AAAHAAEAAAD2//3/AAAHAAEAAAD2//z/AAAHAAEAAAD2//v/AAAHAAEAAAD2//r/AAAHAAEAAAD2//n/AAAHAAEAAAD2//j/AAAHAAEAAAD2//f/AAAHAAEAAAD3//f/AAAHAAEAAAD3//j/AAAHAAEAAAD3//n/AAAHAAAAAAD3//r/AAAHAAEAAAD3//v/AAAHAAEAAAD3//z/AAAHAAEAAAD3//3/AAAHAAEAAAD3//7/AAAHAAAAAAD3////AAAHAAEAAAD3/wAAAAAHAAEAAAD3/wEAAAAHAAEAAAD3/wIAAAAHAAEAAAD3/wMAAAAHAAAAAAD3/wQAAAAHAAEAAAD3/wUAAAAHAAEAAAD3/wYAAAAHAAEAAAD3/wcAAAAHAAEAAAD3/wgAAAAHAAEAAAD4/wgAAAAHAAEAAAD5/wgAAAAHAAEAAAD6/wgAAAAHAAEAAAD7/wgAAAAHAAAAAAD8/wgAAAAHAAEAAAD9/wgAAAAHAAEAAAD+/wgAAAAHAAEAAAD//wgAAAAHAAEAAAAAAAgAAAAHAAEAAAAAAAcAAAAHAAEAAAABAAcAAAAHAAEAAAABAAgAAAAHAAEAAAACAAgAAAAHAAAAAAACAAcAAAAHAAEAAAADAAcAAAAHAAEAAAADAAgAAAAHAAEAAAAEAAgAAAAHAAEAAAAEAAcAAAAHAAEAAAAFAAcAAAAHAAEAAAAFAAgAAAAHAAEAAAAGAAgAAAAHAAEAAAAGAAcAAAAHAAEAAAAHAAcAAAAHAAEAAAAHAAgAAAAHAAEAAAAIAAgAAAAHAAEAAAAIAAcAAAAHAAEAAAAJAAcAAAAHAAEAAAAJAAgAAAAHAAEAAAAKAAgAAAAHAAAAAAAKAAcAAAAHAAEAAAALAAcAAAAHAAEAAAALAAgAAAAHAAEAAAAMAAgAAAAHAAEAAAAMAAcAAAAHAAEAAAANAAcAAAAHAAEAAAANAAgAAAAHAAEAAAAOAAgAAAAHAAEAAAAOAAcAAAAHAAEAAAAPAAcAAAAHAAEAAAAPAAYAAAAHAAEAAAAQAAYAAAAHAAEAAAAQAAUAAAAHAAEAAAARAAUAAAAHAAEAAAARAAQAAAAHAAEAAAARAAMAAAAHAAEAAAARAAIAAAAHAAEAAAASAAIAAAAHAAEAAAASAAMAAAAHAAEAAAASAAQAAAAHAAEAAAASAAUAAAAHAAAAAAASAAYAAAAHAAEAAAARAAYAAAAHAAEAAAARAAcAAAAHAAAAAAAQAAcAAAAHAAEAAAAQAAgAAAAHAAEAAAAPAAgAAAAHAAEAAAARAAgAAAAHAAEAAAASAAgAAAAHAAEAAAASAAcAAAAHAAEAAAD5//b/AAAHAAEAAAD5//f/AAAHAAEAAAD6//f/AAAHAAEAAAD6//b/AAAHAAEAAAD7//b/AAAHAAEAAAD7//f/AAAHAAEAAAD8//f/AAAHAAEAAAD8//b/AAAHAAAAAAD9//b/AAAHAAEAAAD9//f/AAAHAAEAAAD+//f/AAAHAAEAAAD+//b/AAAHAAEAAAD///b/AAAHAAEAAAD///f/AAAHAAEAAAAAAPf/AAAHAAEAAAAAAPb/AAAHAAEAAAABAPb/AAAHAAEAAAABAPf/AAAHAAEAAAACAPf/AAAHAAEAAAACAPb/AAAHAAAAAAADAPb/AAAHAAEAAAADAPf/AAAHAAEAAAAEAPf/AAAHAAEAAAAEAPb/AAAHAAEAAAAFAPb/AAAHAAEAAAAFAPf/AAAHAAEAAAAGAPf/AAAHAAEAAAAGAPb/AAAHAAEAAAAHAPb/AAAHAAAAAAAHAPf/AAAHAAEAAAAIAPf/AAAHAAEAAAAIAPb/AAAHAAEAAAAJAPb/AAAHAAEAAAAJAPf/AAAHAAEAAAAKAPf/AAAHAAEAAAAKAPb/AAAHAAEAAAALAPb/AAAHAAEAAAALAPf/AAAHAAEAAAAMAPf/AAAHAAEAAAAMAPb/AAAHAAEAAAANAPb/AAAHAAEAAAANAPf/AAAHAAEAAAAOAPf/AAAHAAEAAAAOAPb/AAAHAAAAAAAPAPb/AAAHAAEAAAAPAPf/AAAHAAEAAAAQAPf/AAAHAAEAAAAQAPb/AAAHAAEAAAARAPb/AAAHAAEAAAARAPf/AAAHAAEAAAARAPj/AAAHAAEAAAAQAPj/AAAHAAEAAAAQAPn/AAAHAAEAAAAQAPr/AAAHAAEAAAAQAPv/AAAHAAEAAAAQAPz/AAAHAAEAAAAQAP3/AAAHAAEAAAAQAP7/AAAHAAEAAAARAP7/AAAHAAAAAAARAP3/AAAHAAEAAAARAPz/AAAHAAEAAAARAPv/AAAHAAEAAAARAPr/AAAHAAEAAAARAPn/AAAHAAAAAAASAPn/AAAHAAEAAAASAPj/AAAHAAEAAAASAPf/AAAHAAEAAAASAPb/AAAHAAEAAAATAPb/AAAHAAEAAAATAPf/AAAHAAAAAAATAPj/AAAHAAEAAAATAPn/AAAHAAEAAAATAPr/AAAHAAEAAAASAPr/AAAHAAEAAAASAPv/AAAHAAEAAAASAPz/AAAHAAAAAAASAP3/AAAHAAEAAAASAP7/AAAHAAEAAAASAP//AAAHAAEAAAATAP//AAAHAAEAAAATAP7/AAAHAAEAAAATAP3/AAAHAAEAAAATAPz/AAAHAAEAAAATAPv/AAAHAAEAAAA=")
tile_set = ExtResource("3_ko7vf")

[node name="Player" type="CharacterBody2D" parent="." unique_id=877391922]
unique_name_in_owner = true
collision_mask = 2
motion_mode = 1
script = ExtResource("2_jaefs")
SPEED = 55.0

[node name="Sprite" type="AnimatedSprite2D" parent="Player" unique_id=1394287261]
sprite_frames = SubResource("SpriteFrames_opajq")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.75240517

[node name="Shape" type="CollisionShape2D" parent="Player" unique_id=273492717]
shape = SubResource("CapsuleShape2D_ko7vf")

[node name="WorldCam" type="Camera2D" parent="." unique_id=972155906]
unique_name_in_owner = true
position = Vector2(69, 4)
limit_left = -550
limit_top = -250
limit_right = 550
limit_bottom = 250
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[connection signal="justMoved" from="Player" to="." method="_on_player_just_moved"]
